# pyflecs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  license.txt
cpp/src/: bindings.cpp  component.cpp  component.hpp  entity.cpp  entity.hpp  filter.cpp  filter.hpp  iter.cpp  iter.hpp  query.cpp  query.hpp  world.cpp  world.hpp
python/src/flecs/: __init__.py  _component.py  _entity.py  _filter.py  _flecs.cp310-win_amd64.pyd  _query.py  _types.py  _world.py
python/test/: test_other_ops.py  test_quickstart.py  test_structured_array.py
sandbox/: array_check.py  quickstart.py  quickstart_cpp.py  timing.py
